--- a/web/app/client/design/styles.css
+++ b/web/app/client/design/styles.css
@@ -1,6 +1,6 @@
-@layer reset, theme, layout, components;
+@layer tokens, reset, theme, layout;
 
-@import url(./reset.css);
-@import url(./theme.css);
-@import url(./layout.css);
-@import url(./components.css);
+@import url(./global/tokens.css);
+@import url(./global/reset.css);
+@import url(./global/theme.css);
+@import url(./global/layout.css);
