--- a/web/app/server/layouts/app.html
+++ b/web/app/server/layouts/app.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+  <header class="app-header">
+    <a href="" class="brand">Go + Lit</a>
+    <nav>
+      <a href="config">Configurations</a>
+      <a href="execute">Execute</a>
+    </nav>
+  </header>
   <main id="app-content">
     {{ block "content" . }}{{ end }}
   </main>
