--- a/web/app/client/config/components/config-editor.css
+++ b/web/app/client/config/components/config-editor.css
@@ -1,13 +1,13 @@
-@import '@app/design/components/elements.css';
+@import '@app/design/app/elements.css';
 
 :host {
   display: grid;
-  grid-template-rows: auto minmax(0, 1fr) auto auto;
+  grid-template-rows: auto auto auto minmax(0, 1fr);
   gap: var(--space-4);
 }
 
 gl-json-editor {
-  min-height: 200px;
+  grid-row: 4;
 }
 
 .validation-error {
