--- a/web/app/client/config/views/config-edit-view.css
+++ b/web/app/client/config/views/config-edit-view.css
@@ -1,10 +1,9 @@
-@import '@app/design/components/elements.css';
+@import '@app/design/app/elements.css';
 
 :host {
   display: flex;
   flex-direction: column;
   padding: var(--space-6);
-  height: 100vh;
 }
 
 h1 {
